[gd_scene load_steps=19 format=3 uid="uid://cfuifnyayuyc7"]

[ext_resource type="PackedScene" uid="uid://cl4aej42g22or" path="res://MainGame/level1/3d/level1.glb" id="1_dph3f"]
[ext_resource type="Script" path="res://MainGame/level1/level_1_root.gd" id="1_rc86o"]
[ext_resource type="Environment" uid="uid://ofuuhkoyp2b0" path="res://DefaultEnviroment.tres" id="2_6abmd"]
[ext_resource type="PackedScene" uid="uid://cns1uy01wn0kj" path="res://BaseGame/FPS/fps.tscn" id="3_rc86o"]
[ext_resource type="PackedScene" uid="uid://cdjirwx81g8ab" path="res://MainGame/ReadyObject/lamp.tscn" id="5_irg1m"]
[ext_resource type="PackedScene" uid="uid://1l54fu27qkq1" path="res://BaseGame/3D/cardis.tscn" id="6_jew7j"]
[ext_resource type="Texture2D" uid="uid://ykewh7w0be7e" path="res://MainGame/3D/door_metal_0.jpg" id="8_8tglk"]
[ext_resource type="AudioStream" uid="uid://d3wa487lvq3ls" path="res://MainGame/level1/sound/Ambiance/street_0.ogg" id="9_q83kt"]
[ext_resource type="AudioStream" uid="uid://x3fxcq7ilpnw" path="res://MainGame/level1/sound/Ambiance/street_1.ogg" id="10_8tglk"]
[ext_resource type="AudioStream" uid="uid://3slvongs4ubn" path="res://MainGame/level1/sound/Ambiance/street_2.ogg" id="11_qfrw5"]
[ext_resource type="PackedScene" uid="uid://cd0frean6rxir" path="res://MainGame/level1/3d/oven.glb" id="12_8tglk"]
[ext_resource type="PackedScene" uid="uid://btdnlurvalh07" path="res://MainGame/3D/door.glb" id="13_qfrw5"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8tglk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4in26"]
albedo_texture = ExtResource("8_8tglk")
normal_enabled = true
normal_texture = SubResource("CompressedTexture2D_8tglk")
uv1_scale = Vector3(7.47, 7.47, 7.47)

[sub_resource type="BoxMesh" id="BoxMesh_jew7j"]
material = SubResource("StandardMaterial3D_4in26")
size = Vector3(4.59, 4.125, 0.17)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_jew7j"]
data = PackedVector3Array(-2.295, 1.97, 0.085, 2.295, 1.97, 0.085, -2.295, -1.97, 0.085, 2.295, 1.97, 0.085, 2.295, -1.97, 0.085, -2.295, -1.97, 0.085, 2.295, 1.97, -0.085, -2.295, 1.97, -0.085, 2.295, -1.97, -0.085, -2.295, 1.97, -0.085, -2.295, -1.97, -0.085, 2.295, -1.97, -0.085, 2.295, 1.97, 0.085, 2.295, 1.97, -0.085, 2.295, -1.97, 0.085, 2.295, 1.97, -0.085, 2.295, -1.97, -0.085, 2.295, -1.97, 0.085, -2.295, 1.97, -0.085, -2.295, 1.97, 0.085, -2.295, -1.97, -0.085, -2.295, 1.97, 0.085, -2.295, -1.97, 0.085, -2.295, -1.97, -0.085, 2.295, 1.97, 0.085, -2.295, 1.97, 0.085, 2.295, 1.97, -0.085, -2.295, 1.97, 0.085, -2.295, 1.97, -0.085, 2.295, 1.97, -0.085, -2.295, -1.97, 0.085, 2.295, -1.97, 0.085, -2.295, -1.97, -0.085, 2.295, -1.97, 0.085, 2.295, -1.97, -0.085, -2.295, -1.97, -0.085)

[sub_resource type="Animation" id="Animation_q83kt"]
resource_name = "open_DOOR"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, -14.467), Vector3(3.425, 0, -14.467)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8tglk"]
_data = {
"open_DOOR": SubResource("Animation_q83kt")
}

[node name="level1_root" type="Node3D"]
script = ExtResource("1_rc86o")

[node name="level1" parent="." instance=ExtResource("1_dph3f")]

[node name="oven" parent="level1" instance=ExtResource("12_8tglk")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -7.15766, 0.00574198, -2.49443)

[node name="lights" type="Node3D" parent="level1"]

[node name="light_object" parent="level1/lights" instance=ExtResource("5_irg1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.16774, 0.316493)

[node name="light_object5" parent="level1/lights" instance=ExtResource("5_irg1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.95599, 4.16774, 0.660854)

[node name="light_object2" parent="level1/lights" instance=ExtResource("5_irg1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.16774, -5.01226)

[node name="light_object6" parent="level1/lights" instance=ExtResource("5_irg1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.304448, 4.16774, -10.8424)

[node name="light_object9" parent="level1/lights" instance=ExtResource("5_irg1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.304448, 4.16774, -16.8553)

[node name="light_object7" parent="level1/lights" instance=ExtResource("5_irg1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.53215, 4.16774, -9.08413)

[node name="light_object8" parent="level1/lights" instance=ExtResource("5_irg1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.29609, 4.16774, -9.38652)

[node name="light_object3" parent="level1/lights" instance=ExtResource("5_irg1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.47938, 4.16774, -2.72019)

[node name="light_object4" parent="level1/lights" instance=ExtResource("5_irg1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.47938, 4.16774, 0.0562296)

[node name="fps" parent="." instance=ExtResource("3_rc86o")]
transform = Transform3D(0.999905, -0.0137702, 0, 0.0137702, 0.999905, 0, 0, 0, 1, 0.0155406, 0.246558, 0.0583751)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_6abmd")

[node name="cardis" parent="." instance=ExtResource("6_jew7j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.09586, 2.38419e-07, -21.0488)

[node name="openDoor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.425, 0, -14.467)

[node name="doorObject" type="MeshInstance3D" parent="openDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573204, 1.98143, 0)
mesh = SubResource("BoxMesh_jew7j")

[node name="col" type="CollisionShape3D" parent="openDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573204, 1.98143, 0)
shape = SubResource("ConcavePolygonShape3D_jew7j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="openDoor"]
libraries = {
"": SubResource("AnimationLibrary_8tglk")
}

[node name="Street0" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7422, 0, -18.7132)
stream = ExtResource("9_q83kt")
autoplay = true

[node name="Street1" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.72651, 0, -18.5466)
stream = ExtResource("10_8tglk")

[node name="Street2" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.33923, 0, -18.4589)
stream = ExtResource("11_qfrw5")

[node name="Talk" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.54113, -8.63633)

[node name="doors" type="Node3D" parent="."]

[node name="door" parent="doors" instance=ExtResource("13_qfrw5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -5.19694, -0.000138044, -5.27803)

[node name="door2" parent="doors" instance=ExtResource("13_qfrw5")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -1.58847, -0.000138044, -0.335)

[node name="door3" parent="doors" instance=ExtResource("13_qfrw5")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 1.5274, -0.000138044, -0.335)

[node name="door4" parent="doors" instance=ExtResource("13_qfrw5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.696619, -0.000138044, -2.35371)
